--- a/app/assets/stylesheets/styles/sections.scss
+++ b/app/assets/stylesheets/styles/sections.scss
@@ -9,6 +9,7 @@
 	}
 	.library-intro-desc {
 		font-size: 23px;
+		line-height: 32px;
 	}
 	.library-intro-suggestion {
 		padding-top: 12px;
